# hed

./: .ghci  .gitignore  README.md  g  gol.txt  hed.cabal  inu.txt  rpent.txt  sample.txt  stack.yaml  uni.txt
src/: Ansi.hs  Buffer.hs  Control.hs  Display.hs  Document.hs  EditorState.hs  Event.hs  FrameBuffer.hs  GOL.hs  Layout.hs  Main.hs  Process.hs  RectSampler.hs  SizeReport.hs  SpeedTest.hs  SpeedTests.hs  State.hs  Thing.hs  Types.hs  Util.hs
