name:                hed
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

executable hed
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Util, SpeedTests, SizeReport, Control, Event, State, Buffer, Types, EditorState, Process, GOL
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       ansi-terminal >= 0.9,
                       bytestring,
                       containers,
                       linear,
                       mtl,
                       pretty-simple,
                       random,
                       split,
                       text,
                       time,
                       unix,
                       vector
