name:                hed
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

executable hed
  ghc-options:
        -O2
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N -H1g"
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Ansi, Util, SpeedTest, Buffer, Event
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       ansi-terminal >= 0.9,
                       --bytestring,
                       containers,
                       directory,
                       --linear,
                       mtl,
                       pretty-simple,
                       random,
                       split,
                       text,
                       time,
                       unix,
                       vector
